# ros2-navigation-recovery

./: .gitignore  AGENTS.md  LICENSE  README.md  源代码说明.txt
custom_bt_plugins/: CMakeLists.txt  custom_bt_plugins_plugin.xml  package.xml
custom_bt_plugins/include/custom_bt_plugins/: is_footprint_in_collision.hpp
custom_bt_plugins/src/: is_footprint_in_collision.cpp
docs/diagrams/: fig-3-2-行为树流程图.vsdx  fig-4-02-模块划分图.vsdx  fig-4-03-两阶段初始化流程图.vsdx  fig-4-04-initialize调用序列图.vsdx  fig-4-05-日志系统MV架构图.vsdx  fig-4-06-BaseThread类图.vsdx  fig-4-07-线程链式启动时序图.vsdx  fig-4-10-地图渲染数据流图.vsdx  fig-4-11-Nav2参数任务状态机.vsdx  fig-4-12-用户认证流程图.vsdx  fig-4-16-绘制层次图.vsdx  fig-4-17-NavigationAction交互序列图.vsdx
galictic版本恢复算法功能包/custom_bt_plugins/: CMakeLists.txt  custom_bt_plugins_plugin.xml  package.xml
galictic版本恢复算法功能包/custom_bt_plugins/include/custom_bt_plugins/: is_footprint_in_collision.hpp  move_forward_action.hpp  publish_intervention_status.hpp
galictic版本恢复算法功能包/custom_bt_plugins/src/: is_footprint_in_collision.cpp  move_forward_action.cpp  publish_intervention_status.cpp
galictic版本恢复算法功能包/wheeltec_robot_nav2/: CMakeLists.txt  package.xml
galictic版本恢复算法功能包/wheeltec_robot_nav2/behavior_trees/: intelligent_recovery_ackermann.xml
galictic版本恢复算法功能包/wheeltec_robot_nav2/config/: waypoints.yaml
galictic版本恢复算法功能包/wheeltec_robot_nav2/include/wheeltec_nav2/: publish_intervention_status.hpp  wait_at_waypoint_with_time.hpp  waypoint_follower_with_wait.hpp  waypoint_runner_client.hpp
galictic版本恢复算法功能包/wheeltec_robot_nav2/launch/: bringup_launch.py  initpose_service.launch.py  navigation_launch.py  save_map.launch.py  waypoint_follower_with_wait.launch.py  wheeltec_nav2.launch.py
galictic版本恢复算法功能包/wheeltec_robot_nav2/map/: WHEELTEC.yaml
galictic版本恢复算法功能包/wheeltec_robot_nav2/param/wheeltec_param/: akm_param_backup.yaml  param_brushless_senior_diff.yaml  param_flagship_4wd_bs.yaml  param_flagship_4wd_dl.yaml  param_flagship_four_wheel_diff_bs.yaml  param_flagship_four_wheel_diff_dl.yaml  param_flagship_mec_dl.yaml  param_four_wheel_diff_bs.yaml  param_mini_4wd.yaml  param_mini_akm.yaml  param_mini_diff.yaml  param_mini_mec.yaml  param_mini_tank.yaml  param_senior_4wd_bs.yaml  param_senior_akm.yaml  param_senior_diff.yaml  param_senior_mec_EightDrive.yaml  param_senior_mec_bs.yaml  param_senior_mec_dl.yaml  param_senior_omni.yaml  param_top_4wd_bs.yaml  param_top_4wd_dl.yaml  param_top_akm_bs.yaml  param_top_akm_dl.yaml  param_top_mec_EightDrive.yaml  param_top_mec_bs.yaml  param_top_mec_dl.yaml  param_top_omni.yaml  wheeltec_akm_mppi_demo.yaml  wheeltec_diff_mppi_demo.yaml  wheeltec_mec_mppi_demo.yaml
galictic版本恢复算法功能包/wheeltec_robot_nav2/plugins/: publish_intervention_status.xml  wait_at_waypoint_with_time.xml
galictic版本恢复算法功能包/wheeltec_robot_nav2/src/: main.cpp  publish_intervention_status.cpp
gazebo_simulation/: CMakeLists.txt  package.xml
gazebo_simulation/config/: fishbot_2d.lua  robot_ackermann_control.yaml  robot_differential_control.yaml
gazebo_simulation/launch/: ackermann_gazebo_sim.launch.py  differential_gazebo_sim.launch.py
gazebo_simulation/urdf/robot_ackermann/: base.urdf.xacro  common_inertia.xacro  robot.ros2_control.xacro  robot.urdf.xacro
gazebo_simulation/urdf/robot_ackermann/actuator/: caster.urdf.xacro  rear_wheel.urdf.xacro  steering_wheel.urdf.xacro  wheel.urdf.xacro
gazebo_simulation/urdf/robot_ackermann/plugins/: gazebo_control_plugin.xacro
gazebo_simulation/urdf/robot_ackermann/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
gazebo_simulation/urdf/robot_differential/: base.urdf.xacro  robot.ros2_control.xacro  robot.urdf.xacro
gazebo_simulation/urdf/robot_differential/actuator/: caster.urdf.xacro  wheel.urdf.xacro
gazebo_simulation/urdf/robot_differential/plugins/: gazebo_sensor_plugin.xacro
gazebo_simulation/urdf/robot_differential/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
gazebo_simulation/world/: custom_room.world  simulation_environment.world  testCar.world
gazebo_simulation/world/room/: model.sdf
robo_nav2_hmi/: CMakeLists.txt  adduserdialog.cpp  adduserdialog.h  adduserdialog.ui  basethread.cpp  basethread.h  changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  coordinatetransformer.cpp  coordinatetransformer.h  geometryutils.h  historylogmodel.cpp  historylogmodel.h  logfilterproxymodel.cpp  logfilterproxymodel.h  logindialog.cpp  logindialog.h  logindialog.ui  loglevel.h  logquerytask.cpp  logquerytask.h  logstorageengine.cpp  logstorageengine.h  logtablemodel.cpp  logtablemodel.h  logthread.cpp  logthread.h  logutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapcache.cpp  mapcache.h  mapconverter.cpp  mapconverter.h  maploader.cpp  maploader.h  mapmarker.cpp  (+31 more)
robo_nav2_hmi/map/: DisplaySimulationMap.yaml  WHEELTEC.pgm  WHEELTEC.yaml
robot_navigation2/: CMakeLists.txt  package.xml
robot_navigation2/action/: FollowWaypointsWithWait.action
robot_navigation2/behavior_trees/: intelligent_recovery_ackermann.xml  intelligent_recovery_differential.xml  行为树逻辑.md
robot_navigation2/config/: nav2.rviz  nav2_params_ackermann.yaml  nav2_params_differential.yaml  test_waypoints.yaml
robot_navigation2/include/robot_navigation2/: wait_at_waypoint_with_time.hpp  waypoint_follower_with_wait.hpp  waypoint_runner_client.hpp
robot_navigation2/launch/: navigation2_ackermann.launch.py  navigation2_differential.launch.py  rviz2.launch.py
robot_navigation2/maps/: room.pgm  room.yaml  simulationMap.data  simulationMap.pgm  simulationMap.yaml
robot_navigation2/plugins/: wait_at_waypoint_with_time.xml
robot_navigation2/src/: bt_log_monitor.cpp  initpose_service.cpp  main.cpp  wait_at_waypoint_with_time.cpp  waypoint_follower_with_wait.cpp  waypoint_runner_client.cpp  waypoint_runner_main.cpp
robot_navigation2/test/: test_final_recovery.cpp  test_final_recovery_fallback.xml
