<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_bt_plugins</name>
  <version>0.0.1</version>
  <description>Custom BehaviorTree nodes for Nav2</description>
  <maintainer email="1808523787@qq.com">w</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_bt_plugin plugin="${prefix}/custom_bt_plugins_plugin.xml"/>
    <nav2_core plugin="${prefix}/nav2_recoveries/recovery_plugin.xml"/>
  </export>
</package>
